--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <button id="doneadd">Done</button>
                 <button id="canceladd">Cancel</button>
             </form>
-        </div>
+    </div>
+    <div class="spacebottom"></div>
     
 
     <button id="plus">+</button>
